# bioforma

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.rs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codequality.yml  test.yml
bioforma/: __init__.py  _bioforma.pyi  bioforma.pyi  scores.pyi
bioforma/alignment/: __init__.pyi  distance.pyi
bioforma/alphabets/: __init__.pyi  dna.pyi  protein.pyi  rna.pyi
bioforma/seq_analysis/: gc.pyi  orf.pyi
src/: alignment.rs  alignment_old.rs  alphabets.rs  lib.rs  scores.rs  seq_analysis.rs
src/alignment/: alignment_type.rs  distance.rs  mod.rs  scores.rs  scoring.rs
tests/: test_alignment.py  test_alphabets.py  test_metadata.py  test_scores.py  test_seq_analysis.py
