[package]
name = "bioforma"
version = "0.0.0"
edition = "2021"
authors = ["Vladimir Alinsky"]
license = "MIT"
homepage = "https://github.com/SKY-ALIN/bioforma"
repository = "https://github.com/SKY-ALIN/bioforma.git"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src",
    "/bioforma",
    "/tests",
    "/.cargo",
    "!__pycache__",
    "!*.so",
]

[package.metadata.maturin]
name = "bioforma._bioforma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bioforma"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
bio = "1.1.0"
bit-set = "0.5"
