[package]
name = "bioforma"
version = "0.1.0-alpha0"
edition = "2021"
authors = ["Vladimir Alinsky"]
license = "MIT"
homepage = "https://github.com/SKY-ALIN/bioforma"
repository = "https://github.com/SKY-ALIN/bioforma.git"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src",
    "/bioforma",
    "/tests",
    "/.cargo",
    "!__pycache__",
    "!*.so",
]

[package.metadata.maturin]
name = "bioforma.bioforma"

[lib]
name = "bioforma"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.1"
bio = "1.3.1"
bio-types = "1.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["pyo3/generate-import-lib"]

[build-dependencies]
pyo3-build-config = "0.19.0"
