[project]
name = "bioforma"
requires-python = ">=3.7"
authors = [
    {name = "Vladimir Alinsky", email = "Vladimir@Alinsky.tech"}
]
classifiers = [
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Rust',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
]

[project.urls]
Homepage = 'https://github.com/SKY-ALIN/bioforma'
Source = 'https://github.com/SKY-ALIN/bioforma'

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
